# pgphriday

./: LICENSE  README.md
article_code/: animal-cruelty.sql  end-of-the-world-wraparound.sql  rocks-and-sand.sql  securing-pgbouncer.sql  studying-stored-procs.sql  who-died-and-made-you-boss.sql
article_code/pg-new-rag/: README.md  config.py  create_schema.sql  import.py  question-rag.py
article_code/pg-new-rag/docker/: docker-compose.yml
article_code/pg-new-rag/rag/: __init__.py  parse.py  splitter.py
article_code/pg-rag/: README.md  config.py  create_tables.sql  import.py  question-rag.py
article_code/pg-rag/rag/: __init__.py  tokenizer.py
article_code/rusty-postgres/: .env.example  Cargo.toml  README.md
article_code/rusty-postgres/migrations/: 20240808175917_bootstrap-schema.sql
article_code/rusty-postgres/src/: main.rs
